02. Oauth2 구성 완료

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
         <module>eureka-server</module>
 		<module>album-service</module>
 		<module>playlist-service</module>
+        <module>api-gateway</module>
+		<module>user-service</module>
 	</modules>
     <parent>
 		<groupId>org.springframework.boot</groupId>
