--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -17,3 +17,9 @@ spring.datasource.url=jdbc:h2:tcp://localhost/~/test;
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.ddl-auto: update
+
+spring.messages.basename=i18n/exception
+spring.messages.encoding=UTF-8
+
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.force=false
