--- a/playlist-service/src/main/resources/application.properties
+++ b/playlist-service/src/main/resources/application.properties
@@ -1,3 +1,15 @@
 spring.application.name=playlist-service
 server.port = 8020
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+
+spring.messages.basename=i18n/exception
+spring.messages.encoding=UTF-8
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:tcp://localhost/~/playlist;
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.ddl-auto: update
