oauth bug fixed

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -24,7 +24,7 @@ zuul:
       path: /playlists/**
       stripPrefix: false
     song:
-      path: /songs/**0-
+      path: /songs/**
       serviceId: album-service
       stripPrefix: false
     album:
