--- a/album-service/pom.xml
+++ b/album-service/pom.xml
@@ -71,7 +71,10 @@
             <artifactId>yaml-resource-bundle</artifactId>
             <version>1.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-oauth2</artifactId>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
