--- a/playlist-service/src/main/resources/application.properties
+++ b/playlist-service/src/main/resources/application.properties
@@ -13,3 +13,8 @@ spring.datasource.url=jdbc:h2:tcp://localhost/~/playlist;
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.ddl-auto: update
+
+
+security.oauth2.client.client-id=auth_id
+security.oauth2.client.client-secret=auth_secret
+security.oauth2.resource.jwt.key-value=jwt_secret_key
