rabbitmq로 서비스간 통신 방법 변경 + event publish 할 때 다른 스레드로 작업하게 변경

--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -23,3 +23,11 @@ spring.messages.encoding=UTF-8
 
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.force=false
+
+logging.level.org.hibernate.SQL : debug
+spring.jpa.properties.hibernate.default_batch_fetch_size=1000
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
