--- a/playlist-service/src/main/resources/application.properties
+++ b/playlist-service/src/main/resources/application.properties
@@ -12,9 +12,17 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:tcp://localhost/~/playlist;
 spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.ddl-auto: update
 
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql: true
 
 security.oauth2.client.client-id=auth_id
 security.oauth2.client.client-secret=auth_secret
 security.oauth2.resource.jwt.key-value=jwt_secret_key
+
+spring.cloud.stream.bindings.write-review.destination=write_review
+spring.cloud.stream.bindings.write-review.group = review
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
