--- a/playlist-service/src/main/resources/application.properties
+++ b/playlist-service/src/main/resources/application.properties
@@ -26,3 +26,9 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.default_batch_fetch_size=1000
+
+
